# market-dashboard-react

./: .env.example  LICENSE  README.md  data.json  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml  fetch-data.yml
assets/: index-0_kGGAJM.css  index-B81Whbek.js  index-BLY2iz_g.js  index-BTpsa6KZ.css  index-BZ3wZqCF.js  index-BkeHEPzk.js  index-BwZw3fWg.css  index-C6qnnVeP.js  index-CE9OLx1U.css  index-ChTN_iZD.js  index-CnH7UGl6.js  index-CnLXBsnK.js  index-DAwKvkE6.js  index-DJ1OJkd2.js  index-DaK-IPoP.js  index-DcLzwwf4.css  index-DrGcAsKP.js  index-MhK_hkEr.js  index-OkwMbakI.js  index-lnKMt5AT.js  index-mEQXTzbr.js
public/: data.json
scripts/: fetch_data.py  tickers.json  verify-dist.mjs
src/: App.css  App.tsx  AppTest.tsx  config.ts  vite-env.d.ts
src/components/common/: Card.tsx  ExpandableTableCard.tsx  FormattedNumberInput.tsx  Header.tsx  HoldingsFlyover.tsx  Icon.tsx  MarketTable.tsx  PctCell.tsx  Section.tsx  Sparkline.tsx  Table.tsx  Toast.tsx  TradingViewAdvancedChart.tsx  TradingViewModal.tsx  index.ts
src/context/: ChartModalContext.tsx  ThemeContext.tsx
src/data/: symbolMeta.ts
src/features/breadth/: BreadthSection.tsx
src/features/calculator/: PositionCalculator.tsx
src/features/equities/: EquitiesSection.tsx
src/features/macro/: MacroSection.tsx
src/hooks/: useMarketData.ts
src/services/: api.ts  share.ts
src/store/: marketStore.ts
src/types/: index.ts
src/utils/: formatting.ts  tradingView.ts
