[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "market-dashboard"
version = "1.0.0"
description = "Market Dashboard"
requires-python = ">=3.8"
dependencies = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
